--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"sweetalert2": "^11.7.32"
+	}
 }
